Fixed the list button spacing

--- a/src/index.css
+++ b/src/index.css
@@ -104,7 +104,7 @@ li:nth-child(even) {
 
 .list-button {
   float: right;
-  margin: auto 0 auto 1vw;
+  margin: 0 0.5vw;
   font-size: 2vw;
   color: #8A5D6A;
   background-color: transparent;
